--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "jquery": "^3.5.1",
         "popper.js": "^1.16.1",
         "react": "^17.0.1",
+        "react-bootstrap": "^1.4.0",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
         "react-router-dom": "^5.2.0",
